m4_include(config/java.m4)

AC_INIT([igraph-java-wrapper], 0.6, ntamas@rmki.kfki.hu)
AC_CONFIG_SRCDIR(src/hu_kfki_rmki_cneuro_igraph_Graph.c.in)

AC_PROG_CC
AC_PROG_CXX
AC_PROG_JAVA

if test $have_java != yes; then
  AC_MSG_ERROR([You must install the Java SDK before compiling.])
fi

AC_CHECK_FUNCS(fmemopen, [HAVE_FMEMOPEN=1], [HAVE_FMEMOPEN=0])
AC_SUBST(HAVE_FMEMOPEN)

AC_CHECK_FUNCS(open_memstream, [HAVE_OPEN_MEMSTREAM=1], [HAVE_OPEN_MEMSTREAM=0])
AC_SUBST(HAVE_OPEN_MEMSTREAM)

JAVA_PACKAGE=hu.kfki.rmki.cneuro.igraph
AC_SUBST(JAVA_PACKAGE)
JAVA_PACKAGE_DOT=$JAVA_PACKAGE
AC_SUBST(JAVA_PACKAGE_DOT)
JAVA_PACKAGE_SLASH=`echo $JAVA_PACKAGE | tr . /`
AC_SUBST(JAVA_PACKAGE_SLASH)
JAVA_PACKAGE_UNDERSCORE=`echo $JAVA_PACKAGE | tr . _`
AC_SUBST(JAVA_PACKAGE_UNDERSCORE)

case "${host_os}" in
  Mac*)
    JNI_LIBRARY_FILENAME=AC_PACKAGE_NAME.jnilib
  ;;
  Windows*)
    JNI_LIBRARY_FILENAME=AC_PACKAGE_NAME.dll
  ;;
  *)
    JNI_LIBRARY_FILENAME=AC_PACKAGE_NAME.so
  ;;
esac
AC_SUBST(JNI_LIBRARY_FILENAME)

VERSION=${PACKAGE_VERSION}
AC_SUBST(VERSION)

/* checking for igraph */
AC_PATH_PROG([PKGCONFIG], [pkg-config], [none]) 
AC_ARG_WITH(igraph,
  AS_HELP_STRING([--with-igraph=PREFIX],
    [specifies where igraph was installed]),
  [
    IGRAPH_CPPFLAGS="-I${withval}/include"
    IGRAPH_LIBS="-L${withval}/lib -ligraph"
  ],[
    IGRAPH_LIBS="-ligraph"
    IGRAPH_CFLAGS=""
    if test $PKGCONFIG != none; then
      if pkg-config --exists igraph; then
        IGRAPH_CFLAGS=`pkg-config --cflags igraph`
        IGRAPH_LIBS=`pkg-config --libs igraph`
      fi
    fi
  ]
)

OLDCFLAGS="$CFLAGS"
CFLAGS="$CFLAGS $IGRAPH_CFLAGS"
OLDLDFLAGS="$LDFLAGS"
LDFLAGS="$LDFLAGS $IGRAPH_LIBS"
AC_CHECK_LIB([igraph], [igraph_empty], [have_igraph=yes], [have_igraph=no])
if test $have_igraph == "no"; then
  AC_MSG_ERROR([Obviously you must install igraph before compiling.])
fi
CFLAGS="$OLDCFLAGS"
LDFLAGS="$OLDLDFLAGS"
AC_SUBST(IGRAPH_CFLAGS)
AC_SUBST(IGRAPH_LIBS)

AC_CONFIG_FILES([Makefile manifest])

AC_OUTPUT

AC_MSG_RESULT([Configuration successful.])
AC_MSG_RESULT([Now type make to start compilation.])
