AC_INIT(igraph, 0.1, csardi@rmki.kfki.hu)
AC_CONFIG_SRCDIR(src/rinterface.c)

AC_PROG_CC

AC_CHECK_FUNCS(fmemopen, [HAVE_FMEMOPEN=1], [HAVE_FMEMOPEN=0])
AC_SUBST(HAVE_FMEMOPEN)

AC_CHECK_FUNCS(open_memstream, [HAVE_OPEN_MEMSTREAM=1], [HAVE_OPEN_MEMSTREAM=0])
AC_SUBST(HAVE_OPEN_MEMSTREAM)

AC_CONFIG_FILES([src/config.h R/config.R])

AC_OUTPUT
