add_library(igraphpp STATIC attributes
                            edge
                            graph
                            matching
                            vector
                            vector_bool
                            vector_long
                            vertex
                            vertex_selector

                            analysis/components
                            analysis/non_simple

                            generators/degree_sequence
                            generators/erdos_renyi
                            generators/famous
                            generators/full
                            generators/grg
                            generators/line_graph
                            generators/ring

                            io/edgelist
                            io/gml
                            io/graphml
                            io/leda
                            io/lgl
                            io/ncol
)

